--- a/lib/src/components/input/input.css
+++ b/lib/src/components/input/input.css
@@ -56,7 +56,7 @@
 }
 
 :host([focused]:not([valid]):not([invalid])) [part="input"] {
-  --core-input-box-shadow: 0px 0px 0px 1px var(--core-color-focus);
+  --core-input-box-shadow: var(--core-focus-outline);
   --core-input-border-color: var(--core-color-focus);
 }
 
@@ -86,24 +86,26 @@
   color: var(--core-input-placeholder-color);
 }
 
-::slotted([slot="help"]) {
+[part="help"] {
   display: block;
   font-size: var(--core-font-size-xs);
   color: var(--core-color-font-light);
   margin-top: var(--core-space-sm);
 }
 
-::slotted([slot="error"]) {
+[part="error"] {
   display: block;
   font-size: var(--core-font-size-xs);
   color: var(--core-color-danger);
   margin-top: var(--core-space-sm);
 }
 
-::slotted([slot="start"]) {
+[part="start"] {
+  display: flex;
   margin-left: var(--core-space-sm);
 }
 
-::slotted([slot="end"]) {
+[part="end"] {
+  display: flex;
   margin-right: var(--core-space-sm);
 }
