--- a/lib/src/components/button/button.css
+++ b/lib/src/components/button/button.css
@@ -2,7 +2,7 @@
   --core-button-padding: 0 var(--core-space-md);
   --core-button-bg-color: var(--core-color-ui-lighter);
   --core-button-border: none;
-  --core-button-border-radius: none;
+  --core-button-border-radius: var(--core-default-border-radius);
   --core-button-font-size: var(--core-font-size-md);
   --core-button-text-color: var(--core-color-font);
   --core-button-box-shadow: 0;
