--- a/lib/src/components/tabs/tabs.css
+++ b/lib/src/components/tabs/tabs.css
@@ -1,7 +1,7 @@
 :host {
   --core-tab-height: var(--core-size-md);
   --core-tab-box-shadow: 0;
-  --core-tab-border-width: 2px;
+  --core-tab-border-width: var(--core-border-width-md);
   --core-tab-border-color: transparent;
   /* TODO: This is weeeeird, cannot set shorthand properties for border width or border style */
   --core-tab-border-bottom-style: solid;
