--- a/lib/src/components/checkbox/checkbox.css
+++ b/lib/src/components/checkbox/checkbox.css
@@ -1,10 +1,11 @@
 :host {
   --core-checkbox-bg-color: var(--core-color-white);
-  --core-checkbox-border: 2px solid var(--core-color-ui-light);
+  --core-checkbox-border: var(--core-default-border-width) solid
+    var(--core-color-ui-light);
   --core-checkbox-cursor: pointer;
   --core-checkbox-box-shadow: none;
   --core-checkbox-height: var(--core-size-md);
-  --core-checkbox-border-radius: none;
+  --core-checkbox-border-radius: var(--core-default-border-radius);
 }
 
 :host {
@@ -73,6 +74,7 @@ input {
 }
 
 :host(:focus) [part="box"] {
+  border-color: var(--core-color-focus);
   --core-button-box-shadow: var(--core-focus-outline);
 }
 
