--- a/lib/src/components/textarea/textarea.css
+++ b/lib/src/components/textarea/textarea.css
@@ -3,7 +3,7 @@
   --core-textarea-padding: 0 var(--core-space-md);
   --core-textarea-height: var(--core-size-md);
   --core-textarea-border-color: var(--core-color-ui-light);
-  --core-textarea-border-radius: none;
+  --core-textarea-border-radius: var(--core-default-border-radius);
   --core-textarea-box-shadow: none;
   --core-textarea-placeholder-color: var(--core-color-font-light);
   --core-textarea-font-size: var(--core-font-size-md);
@@ -39,7 +39,8 @@
   display: inherit;
   outline: 0;
   padding: var(--core-space-md);
-  border: 2px solid var(--core-textarea-border-color);
+  border: var(--core-default-border-width) solid
+    var(--core-textarea-border-color);
 }
 
 :host textarea:hover {
