--- a/lib/src/components/toggle/toggle.css
+++ b/lib/src/components/toggle/toggle.css
@@ -2,6 +2,7 @@
   --core-toggle-box-shadow: none;
   --core-toggle-height: var(--core-size-md);
   --core-toggle-box-size: var(--core-size-sm);
+  --core-toggle-box-border-radius: 300px;
   --core-toggle-indicator-margin: var(--core-space-xs);
   --core-toggle-indicator-size: calc(
     var(--core-toggle-box-size) - (var(--core-toggle-indicator-margin) * 2)
@@ -45,9 +46,10 @@
 
 [part="box"] {
   position: relative;
+  box-shadow: var(--core-toggle-box-shadow);
   background: var(--core-color-ui-light);
-  border: 2px solid var(--core-color-ui-light);
-  border-radius: 300px;
+  border: var(--core-default-border-width) solid var(--core-color-ui-light);
+  border-radius: var(--core-toggle-box-border-radius);
   display: inline-block;
   transition: all 0.2s ease;
   height: var(--core-toggle-box-size);
