--- a/lib/src/themes/minimal.css
+++ b/lib/src/themes/minimal.css
@@ -1,7 +1,16 @@
 :root {
+  /* FONT */
   --core-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --core-font-scale: 1;
+  --core-font-size-xs: calc(1em / var(--core-font-scale) * 0.8);
+  --core-font-size-sm: calc(1em / var(--core-font-scale) * 0.9);
+  --core-font-size-md: calc(1em / var(--core-font-scale) * 1);
+  --core-font-size-lg: calc(1em / var(--core-font-scale) * 1.5);
+  --core-font-size-xl: calc(1em / var(--core-font-scale) * 2);
+  --core-font-size-xxl: calc(1em / var(--core-font-scale) * 2.4);
 
+  /* COLORS */
   --core-color-primary-hue: 250;
   --core-color-primary-light: hsl(var(--core-color-primary-hue), 100%, 68%);
   --core-color-primary: hsl(var(--core-color-primary-hue), 100%, 60%);
@@ -48,6 +57,7 @@
   --core-color-white: hsl(var(--core-color-ui-hue), 0%, 100%);
   --core-color-black: hsl(var(--core-color-ui-hue), 0%, 0%);
 
+  /* SIZES */
   --core-container: 800px;
   --core-container-xxs: 300px;
   --core-container-xs: 600px;
@@ -62,18 +72,17 @@
   --core-space-lg: 32px;
   --core-space-xl: 64px;
 
-  --core-font-size-xs: 0.83em;
-  --core-font-size-sm: 0.9em;
-  --core-font-size-md: 1em;
-  --core-font-size-lg: 1.17em;
-  --core-font-size-xl: 1.5em;
-  --core-font-size-xxl: 2em;
+  --core-border-width-sm: 1px;
+  --core-border-width-md: 2px;
+  --core-border-width-lg: 3px;
+  --core-default-border-width: var(--core-border-width-md);
 
   --core-border-radius-xs: 2px;
   --core-border-radius-sm: 4px;
   --core-border-radius-md: 8px;
   --core-border-radius-lg: 16px;
   --core-border-radius-xl: 32px;
+  --core-default-border-radius: 0;
 
   --core-size: 48px;
   --core-size-xs: 24px;
@@ -99,8 +108,21 @@
 [theme="minimal"] {
   transition: background 0.2s ease;
   color: var(--core-color-font);
+  font-size: 14px;
   font-family: var(--core-font-family);
   background-color: var(--core-color-white);
+}
+
+@media (min-width: 600px) {
+  [theme="minimal"] {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 800px) {
+  [theme="minimal"] {
+    font-size: 18px;
+  }
 }
 
 [mode="dark"] {
