recalculate height if slot changes

--- a/lib/src/components/accordion/accordion.css
+++ b/lib/src/components/accordion/accordion.css
@@ -25,6 +25,10 @@
   display: block;
 }
 
+::slotted([slot="title"]) {
+  cursor: pointer;
+}
+
 [part="trigger"] {
   background: transparent;
   color: inherit;
