--- a/lib/src/components/list/list-item.css
+++ b/lib/src/components/list/list-item.css
@@ -4,13 +4,33 @@
   justify-content: between;
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: var(--core-list-item-padding);
   min-height: var(--core-list-item-height);
   color: var(--core-color-font);
 }
 
 :host([selectable]) {
   cursor: pointer;
+}
+
+:host([size="sm"]) {
+  --core-list-item-height: var(--core-size-sm);
+  --core-list-item-padding: 0 var(--core-space-md);
+}
+
+:host([size="md"]) {
+  --core-list-item-height: var(--core-size-md);
+  --core-list-item-padding: 0 var(--core-space-md);
+}
+
+:host([size="lg"]) {
+  --core-list-item-height: var(--core-size-lg);
+  --core-list-item-padding: 0 var(--core-space-lg);
+}
+
+:host([size="xl"]) {
+  --core-list-item-height: var(--core-size-xl);
+  --core-list-item-padding: 0 var(--core-space-lg);
 }
 
 [part="content"] {
