--- a/lib/src/components/modal/modal.css
+++ b/lib/src/components/modal/modal.css
@@ -93,7 +93,7 @@
   top: 0;
   width: 100%;
   padding: var(--core-modal-padding);
-  min-height: var(--core-size-md);
+  min-height: var(--core-size-lg);
 }
 
 [part="header-middle"] {
