add box example

--- a/lib/src/components/accordion/accordion.css
+++ b/lib/src/components/accordion/accordion.css
@@ -25,7 +25,8 @@
   display: block;
 }
 
-::slotted([slot="title"]) {
+::slotted([slot="title"]),
+::slotted([slot="trigger"]) {
   cursor: pointer;
 }
 
