--- a/lib/src/components/select/select.css
+++ b/lib/src/components/select/select.css
@@ -15,10 +15,10 @@
 
   --core-select-list-border: var(--core-border-width-sm) solid
     var(--core-color-ui-light);
-  --core-select-list-border-radius: var(--core-select-border-radius-sm);
+  --core-select-list-border-radius: var(--core-select-border-radius);
   --core-select-list-box-shadow: 0px;
   --core-select-list-position: absolute;
-  --core-select-list-top: 110%;
+  --core-select-list-top: calc(100% + var(--core-space-sm));
   --core-select-list-transition: none;
   --core-select-list-opacity: 1;
 }
